--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,26 @@
         android:id="@+id/rv_mainMovies"
     />
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="22sp"
+                android:id="@+id/tv_error_message_display"
+                android:padding="16dp"
+                android:text="@string/error_message"
+                android:visibility="invisible"
+                />
+            <ProgressBar
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:id="@+id/pb_loading_indicator"
+                android:layout_gravity="center"
+                android:visibility="invisible"
+
+                />
+    </FrameLayout>
+
 </LinearLayout>
