--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,9 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:title="@string/Menu"
+        android:title="@string/top_rated"
         android:orderInCategory="1"
-        app:showAsAction="ifRoom"
-        android:id="@+id/menu" />
+        android:id="@+id/top_rated" />
+
+    <item android:id="@+id/popular"
+        android:orderInCategory="2"
+        android:title="@string/popular"/>
+
 
 </menu>
