--- a/app/src/main/res/layout/activity_movie_details_page.xml
+++ b/app/src/main/res/layout/activity_movie_details_page.xml
@@ -6,52 +6,52 @@
     android:layout_height="match_parent"
     tools:context="com.example.android.movies1.MovieDetailsPage">
 
-
-    <TextView
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/title"
-        android:textSize="20sp"
-        android:layout_weight=".1"
-        />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/poster_image"
-        android:scaleType="fitXY"
-        android:layout_weight=".4"
-        android:contentDescription="@string/desc"
-
-        />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/overview"
-        android:textSize="12sp"
-        android:scrollbars="vertical"
-        android:layout_weight=".3"
-        />
+        android:layout_height="match_parent">
 
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/date"
-        android:textSize="20sp"
-        android:layout_weight=".1"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/title"
+            android:textSize="20sp"
+            />
 
-        />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/poster_image"
+            android:scaleType="fitXY"
+            android:contentDescription="@string/desc"
+            />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/rate"
-        android:textSize="20sp"
-        android:layout_weight=".1"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/overview"
+            android:textSize="12sp"
+            android:scrollbars="vertical"
+            />
 
-        />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/date"
+            android:textSize="20sp"
+
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rate"
+            android:textSize="20sp"
+
+            />
+
+    </FrameLayout>
 
 
 </LinearLayout>
