--- a/app/src/main/res/layout/activity_movie_details_page.xml
+++ b/app/src/main/res/layout/activity_movie_details_page.xml
@@ -4,43 +4,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.movies1.MovieDetailsPage">
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
+tools:context="com.example.android.movies1.MovieDetailsPage">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+
+
 
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/title"
-            android:textSize="20sp"
+            android:textSize="26sp"
+            android:layout_marginTop="24sp"
+
             />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="185dp"
+            android:layout_height="185dp"
             android:id="@+id/poster_image"
             android:scaleType="fitXY"
+            android:layout_marginTop="14sp"
             android:contentDescription="@string/desc"
             />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/overview"
-            android:textSize="12sp"
-            android:scrollbars="vertical"
+            android:id="@+id/date"
+            android:textSize="20sp"
+            android:layout_marginTop="10sp"
             />
 
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/date"
-            android:textSize="20sp"
-
+            android:id="@+id/overview"
+            android:textSize="23sp"
+            android:scrollbars="vertical"
+            android:layout_marginTop="20sp"
+            android:gravity="center"
             />
 
         <TextView
@@ -51,7 +57,7 @@
 
             />
 
-    </FrameLayout>
+
 
 
 </LinearLayout>
