--- a/app/src/main/res/layout/activity_movie_details_page.xml
+++ b/app/src/main/res/layout/activity_movie_details_page.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-tools:context="com.example.android.movies1.MovieDetailsPage">
+    tools:context="com.example.android.movies1.MovieDetailsPage">
 
-
-
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
 
         <TextView
             android:layout_width="wrap_content"
@@ -18,7 +20,13 @@ tools:context="com.example.android.movies1.MovieDetailsPage">
             android:id="@+id/title"
             android:textSize="26sp"
             android:layout_marginTop="24sp"
+            />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rating"
+            android:textSize="20sp"
             />
 
         <ImageView
@@ -27,6 +35,7 @@ tools:context="com.example.android.movies1.MovieDetailsPage">
             android:id="@+id/poster_image"
             android:scaleType="fitXY"
             android:layout_marginTop="14sp"
+            android:adjustViewBounds="true"
             android:contentDescription="@string/desc"
             />
 
@@ -38,7 +47,6 @@ tools:context="com.example.android.movies1.MovieDetailsPage">
             android:layout_marginTop="10sp"
             />
 
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -49,15 +57,6 @@ tools:context="com.example.android.movies1.MovieDetailsPage">
             android:gravity="center"
             />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/rate"
-            android:textSize="20sp"
+    </LinearLayout>
 
-            />
-
-
-
-
-</LinearLayout>
+</ScrollView>
