--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -10,6 +10,8 @@
         android:layout_width="wrap_content"
         android:padding="16dp"
         android:contentDescription="@string/desc"
+        android:adjustViewBounds="true"
+
         />
 
 
