--- a/app/src/main/res/layout/activity_trailer.xml
+++ b/app/src/main/res/layout/activity_trailer.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:padding="16dp">
-
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/iv"
@@ -12,8 +11,9 @@
         android:layout_height="80dp"
         tools:ignore="ContentDescription" />
 
+
     <TextView
-        android:id="@+id/tv_detail_number"
+        android:id="@+id/trailer_name_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -21,6 +21,7 @@
         android:fontFamily="sans-serif-condensed"
         android:gravity="center_vertical"
         android:textAppearance="?android:textAppearanceSmall"
+
         android:textSize="20sp"
         android:textStyle="italic|bold" />
 
