--- a/app/src/main/res/layout/activity_movie_details_page.xml
+++ b/app/src/main/res/layout/activity_movie_details_page.xml
@@ -9,7 +9,7 @@
     tools:context="com.example.android.movies1.MovieDetailsPage">
 
     <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center_vertical"
@@ -73,11 +73,12 @@
             app:layout_constraintTop_toBottomOf="@+id/date" />
 
         <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textSize="22sp"
             android:id="@+id/rv_movie_details"
-            />
+            android:layout_width="134dp"
+            android:layout_height="118dp"
+            android:textSize="22sp"
+            app:layout_constraintTop_toBottomOf="@+id/overview"
+            tools:layout_editor_absoluteX="0dp" />
 
     </android.support.constraint.ConstraintLayout>
 
