--- a/app/src/main/res/layout/activity_movie_details_page.xml
+++ b/app/src/main/res/layout/activity_movie_details_page.xml
@@ -76,9 +76,22 @@
             android:id="@+id/rv_movie_details"
             android:layout_width="134dp"
             android:layout_height="118dp"
+            android:layout_marginStart="1dp"
             android:textSize="22sp"
-            app:layout_constraintTop_toBottomOf="@+id/overview"
-            tools:layout_editor_absoluteX="0dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/overview" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerview_reviews"
+            android:layout_width="40dp"
+            android:layout_height="96dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/rv_movie_details"
+            app:layout_constraintTop_toBottomOf="@+id/overview"></android.support.v7.widget.RecyclerView>
 
     </android.support.constraint.ConstraintLayout>
 
