working on loading fav movies

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,4 +36,11 @@
                 />
     </FrameLayout>
 
+    <!--<GridView android:id="@+id/gvMain"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:verticalSpacing="0dp"-->
+        <!--android:numColumns="auto_fit"-->
+        <!--xmlns:android="http://schemas.android.com/apk/res/android"/>-->
+
 </RelativeLayout>
