--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -10,5 +10,7 @@
         android:orderInCategory="2"
         android:title="@string/popular"/>
 
-
+    <item android:id="@+id/favorite_movies"
+        android:orderInCategory="3"
+        android:title="@string/favorite_movies" />
 </menu>
