--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="Grey">#d3d3d3</color>
     <color name="Golden">#ffd700</color>
+    <color name="white">#ffffff</color>
 </resources>
