--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,19 @@
     tools:context="com.example.android.movies1.MainActivity">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_mainMovies"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="22sp"
-        android:id="@+id/rv_mainMovies"
     />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_favMoviesMovies"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="22sp"
+        android:layout_toRightOf="@id/rv_mainMovies"
+        />
 
     <FrameLayout
         android:layout_width="match_parent"
