--- a/app/src/main/res/layout/activity_movie_details_page.xml
+++ b/app/src/main/res/layout/activity_movie_details_page.xml
@@ -102,7 +102,9 @@
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/rv_movie_details"
-            app:layout_constraintTop_toBottomOf="@+id/overview"></android.support.v7.widget.RecyclerView>
+            app:layout_constraintTop_toBottomOf="@+id/overview">
+
+        </android.support.v7.widget.RecyclerView>
 
     </android.support.constraint.ConstraintLayout>
 
