--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,13 +15,13 @@
         android:textSize="22sp"
     />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_favMoviesMovies"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="22sp"
-        android:layout_toRightOf="@id/rv_mainMovies"
-        />
+    <!--<android.support.v7.widget.RecyclerView-->
+        <!--android:id="@+id/rv_favMoviesMovies"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textSize="22sp"-->
+        <!--android:layout_toRightOf="@id/rv_mainMovies"-->
+        <!--/>-->
 
     <FrameLayout
         android:layout_width="match_parent"
